--- a/app/src/main/res/layout/fragment_list_payment.xml
+++ b/app/src/main/res/layout/fragment_list_payment.xml
@@ -5,10 +5,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:paddingLeft="16dp"
-    tools:context=".view.ListPaymentFragment"
-    android:background="#F7000000"
-    android:paddingRight="16dp">
+    tools:context=".view.ListPaymentFragment">
 
     <TextView
         android:id="@+id/tv_layout_title"
@@ -24,26 +21,28 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
-        android:layout_width="373dp"
-        android:layout_height="567dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layoutManager="LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@id/btn_logout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="130dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_layout_title"
+        app:layout_constraintTop_toBottomOf="@+id/btn_logout"
         tools:listitem="@layout/item_recycler" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_logout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="140dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:background="#2AFAF6F6"
+        android:background="@color/black"
         android:text="@string/btn_logout_text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_layout_title" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
