--- a/app/src/main/res/layout/fragment_autorization.xml
+++ b/app/src/main/res/layout/fragment_autorization.xml
@@ -54,7 +54,7 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
-        android:visibility="gone"
+        android:visibility="invisible"
         android:layout_marginTop="30dp"
         android:layout_height="wrap_content" />
 
