--- a/app/src/main/res/layout/fragment_autorization.xml
+++ b/app/src/main/res/layout/fragment_autorization.xml
@@ -6,6 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="top"
+    android:id="@+id/rootLayout"
     tools:context=".view.RegistrationFragment">
 
     <TextView
